# aumai-vaidyaai

./: AGENTS.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.hypothesis/constants/: 004e722d2b39195a  020bd4b9cc3144b7  033cea2e5cae6cf7  03a0bc33c3be41ac  041b82baf95116f0  055c6411036374f4  0628f2618034526e  068c9e16d4886008  07475514dc0bbadb  07b8446a052edf99  07d3cc9c2856c478  09ae28b390a241d0  09f718a229a0a7aa  0c81e2f83b59deea  0cfa12dfbf9e9abb  0d64ef357c94737d  0d81dd8c57144454  0e7f8902539f63f3  0eaa1e71adb72da2  10d1155a56587e3a  110a1d1d892c7388  11a4fb9bf042a054  12e7e479072c853b  13b7c9e560189932  13efa0910df75e7a  146ce438f76c65d3  14ce7443b3faf241  1711dca7bbb78b0f  17e3f8cea4119fc7  18baa06439e76d96  1a5326b88fdd03ad  1b03421aacbc7cd8  1dc359315dc82348  1f4b62403fde35c2  1ff82dc6c6014893  206093a409fef020  219385b4acf67710  2196e604560785f8  224445af19a2a647  22651341202476e9  (+246 more)
.hypothesis/tmp/: tmp2ggm47xv  tmp4eommpe6  tmpmnqx8z_n  tmpwu0_9s0o
docs/: api-reference.md  getting-started.md
examples/: quickstart.py
src/aumai_vaidyaai/: __init__.py  cli.py  core.py  models.py
tests/: test_cli.py  test_core.py
